--- a/vignettes/vaccination.Rmd
+++ b/vignettes/vaccination.Rmd
@@ -22,7 +22,7 @@ To test the efficacy of different vaccination scenarios you first need to create
 
 # Example
 
-```{r, eval=FALSE}
+```{r}
 library("fluEvidenceSynthesis")
 
 # Create vaccination scenario
@@ -50,8 +50,10 @@ data("polymod_uk")
 data("inference.results")
 
 # This returns the total size of the outbreak given the vaccination scenario and the
-# 1000th posterior (mcmc) sample
-vaccinationScenario( age_sizes=age_sizes[,1], vaccine_calendar=vaccine_calendar,
+# 1000th posterior (mcmc) sample. The outbreak sizes is separated by age group and 
+# risk groups
+cases.per.year <- vaccinationScenario( age_sizes=age_sizes[,1],
+                     vaccine_calendar=vaccine_calendar,
                      polymod_data=as.matrix(polymod_uk),
                      contact_ids=inference.results$contact.ids[1000,],
                      parameters=inference.results$batch[1000,]
@@ -60,7 +62,29 @@ vaccinationScenario( age_sizes=age_sizes[,1], vaccine_calendar=vaccine_calendar,
 
 The above shows how to use a specific posterior (mcmc) sample to create one prediction. In general, you should have a number of samples from the posterior and you call vaccinationScenario using each of those samples. This will result in a posterior distribution for the predicted efficacy of your vaccinationScenario. This can then be used for further analysis, such as the cost effectiveness of your analysis.
 
-The `vaccine_calendar` object defines the needed parameters for a certain vaccine scenario. With `vaccine_calendar$efficacy` a vector defining the efficacy of the vaccine for the 7 age groups. In this case we assume that the vaccine causes immunity for 70% of most of the age groups, except for the elderly (>65) where it is only successful in 30% of the cases. The calendar is a matrix holding daily uptakes rates of the vaccine. The first 7 columns of the matrix are the uptake rates for the low risk age groups, following 7 columns are the high risk groups. Finally the dates give the starting dates for each of the rows of the calendar matrix. The last date in the date vector is the last date of vaccination. After that date all uptake rates are set back to zero. 
+The `vaccine_calendar` object defines the needed parameters for a certain vaccine scenario. With `vaccine_calendar$efficacy` a vector defining the efficacy of the vaccine for the 7 age groups. In this case we assume that the vaccine causes immunity for 70% of most of the age groups, except for the elderly (>65) where it is only successful in 30% of the cases. The calendar is a matrix holding daily uptakes rates of the vaccine. The first 7 columns of the matrix are the uptake rates for the low risk age groups, following 7 columns are the high risk groups. Finally the dates give the starting dates for each of the rows of the calendar matrix. The last date in the date vector is the last date of vaccination. After that date all uptake rates are set back to zero.
+
+## Full posterior of cases
+
+To get the full posterior of cases under this vaccination scenario you can run it for each inference sample as follows:
+
+```{r,cache=T,fig.width=5,fig.height=5}
+library(ggplot2)
+cases <- sapply(seq(1,nrow(inference.results$batch)), function(i)
+{
+  sum(vaccinationScenario( age_sizes=age_sizes[,1],
+                     vaccine_calendar=vaccine_calendar,
+                     polymod_data=as.matrix(polymod_uk),
+                     contact_ids=inference.results$contact.ids[i,],
+                     parameters=inference.results$batch[i,]
+                    ))
+})
+ggplot(data=data.frame("cases"=cases)) + geom_histogram(aes(x=cases),bins=25)
+```
+
+## Possible exercises
+
+1. Try different vaccination scenarios
 
 # References
 
