--- a/vignettes/inference.Rmd
+++ b/vignettes/inference.Rmd
@@ -247,6 +247,61 @@ ggplot(data=melt(inference.results$batch)) + facet_wrap( ~ Var2, ncol=3, scales=
 
 ```
 
+
+## Posterior model results
+
+```{r,cache=T, fig.width=5, fig.height=5}
+pars <- inference.results$batch[1,]
+ode.results <- function( pars ) 
+{
+  data("age_sizes")
+  
+  age.group.limits <- c(1,5,15,25,45,65)
+  contacts <- contact.matrix(as.matrix(polymod_uk),
+                             age_sizes[,1], age.group.limits )
+  
+  age.groups <- separate.into.age.groups( age_sizes[,1], 
+                                          age.group.limits )
+  
+  # Fraction of each age group classified as high risk
+  # We can classify a third risk group, but we are not doing
+  # that here (the second row is 0 in our risk.ratios matrix)
+  risk.ratios <- matrix( c(
+    0.021, 0.055, 0.098, 0.087, 0.092, 0.183, 0.45, 
+    0, 0, 0, 0, 0, 0, 0                          
+  ), ncol=7, byrow=T )
+  
+  # Population sizes in each age and risk group
+  popv <- separate.into.risk.groups(
+    age.groups, risk.ratios );
+  
+  # Population size initially infected by age and risk group
+  initial.infected <- rep( 10^pars[9], 7 )
+  initial.infected <- separate.into.risk.groups(
+    initial.infected, risk.ratios );
+  
+  # Run simulation
+  # Note that to reduce complexity 
+  # we are using the same susceptibility parameter for multiple age groups
+  odes <- infectionODEs( popv, initial.infected,
+                         vaccine_calendar,
+                         contacts,
+                         c(pars[6],pars[6],pars[6],
+                           pars[7],pars[7],pars[7],pars[8]),
+                         transmissibility=pars[5],
+                         c(0.8,1.8), 7 )
+  
+  # For simplicity we sum the low and high risk group
+  simplify.odes <- odes[,2:8]+odes[,9:15]+odes[,16:22]
+  rownames(simplify.odes) <- odes[,1]
+  return( simplify.odes )
+}
+
+cim <- credible.interval.model(ode.results, inference.results$batch)
+
+ggplot( data=cim ) + facet_wrap( ~ column.ID, ncol=3, scales="free" ) + geom_line(aes(x=row.ID,y=value,factor=column.ID))
+```
+
 # References
 
 Baguelin, Marc, Stefan Flasche, Anton Camacho, Nikolaos Demiris, Elizabeth Miller, and W. John Edmunds. ‘Assessing Optimal Target Populations for Influenza Vaccination Programmes: An Evidence Synthesis and Modelling Study.’ PLoS Med 10, no. 10 (2013): e1001527. doi:10.1371/journal.pmed.1001527.
