--- a/vignettes/inference.Rmd
+++ b/vignettes/inference.Rmd
@@ -306,7 +306,7 @@ ode.results <- function( pars )
 # Calculate the credibility intervals for each time point. By default the function
 # calculate it for the (equal tailed) credibility interval of 0% (median), 50% and 98%
 cim <- credible.interval.model(ode.results, inference.results$batch, intervals=c(0,0.5, 0.98))
-cim$row.ID <- sapply(cim$row.ID,function(s) as.Date(as.character(s))) 
+cim$row.ID <- as.Date(as.character(cim$row.ID)) 
 
 ggplot( data=cim ) + facet_wrap( ~ column.ID, ncol=3, scales="free" ) +
   stat_ci( aes(row.ID,value,ci=aggregate, factor=column.ID) ) +
