--- a/vignettes/inference.Rmd
+++ b/vignettes/inference.Rmd
@@ -154,10 +154,10 @@ build.llikelihood <- function()
     # Fraction of each age group classified as high risk
     # We can classify a third risk group, but we are not doing
     # that here (the second row is 0 in our risk.ratios matrix)
-    risk.ratios <- matrix( c(
+    risk.ratios <- matrix(c(
                              0.021, 0.055, 0.098, 0.087, 0.092, 0.183, 0.45, 
                              0, 0, 0, 0, 0, 0, 0                          
-                             ), ncol=7, byrow=T )
+                             ), ncol = 7, byrow = T)
 
     # Population sizes in each age and risk group
     popv <- separate.into.risk.groups(
@@ -174,9 +174,9 @@ build.llikelihood <- function()
     odes <- infectionODEs( popv, initial.infected,
                           vaccine_calendar,
                           contacts,
-                          c(pars[6],pars[6],pars[6],
-                            pars[7],pars[7],pars[7],pars[8]),
-                          transmissibility=pars[5],
+                          c(pars[6], pars[6], pars[6],
+                            pars[7], pars[7], pars[7], pars[8]),
+                          transmissibility = pars[5],
                           c(0.8,1.8), 7 )
     
     # Ignore times row
@@ -192,45 +192,38 @@ build.llikelihood <- function()
     converted.odes <- converted.odes[,1:5]
     
     # For each week and each group sum log likelihood
-    epsilons <- c( pars[1], pars[1], pars[2], pars[2], pars[3])
-    ll <- sum(
-      sapply( seq(1,nrow(converted.odes)), function(week)
-        sapply( seq(1,ncol(converted.odes)), function(ag)
-          llikelihood.cases(
-            epsilons[ag],pars[4], converted.odes[week,ag],
-            age.group.sizes.5[ag], ili$ili[week,ag], ili$total.monitored[week,ag],
-            confirmed.samples$positive[week,ag], confirmed.samples$total.samples[week,ag] )
-        )
-      )
-    )
+    epsilons <- c(pars[1], pars[1], pars[2], pars[2], pars[3])
+    ll <- log_likelihood_cases(
+            epsilons,pars[4], as.matrix(converted.odes),
+            age.group.sizes.5, ili$ili, ili$total.monitored,
+            confirmed.samples$positive, confirmed.samples$total.samples )
     return(ll)
   }
   return(llikelihood.f)
 }
 
-llprior <- function( pars )
-{
-  if (any(pars[1:8]<0) || any(pars[1:4]>1) || any(pars[6:8]>1)
+llprior <- function(pars) {
+  if (any(pars[1:8] < 0) || any(pars[1:4] > 1) || any(pars[6:8] > 1)
       || pars[9] < log(0.00001) || pars[9] > log(10) )
     return(-Inf)
   
-  lprob <- dnorm(pars[5],0.1653183,0.02773053,1)
-  lprob <- lprob + dlnorm(pars[1],-4.493789,0.2860455,1)
-  lprob <- lprob + dlnorm(pars[2],-4.117028,0.4751615,1)
-  lprob <- lprob + dlnorm(pars[3],-2.977965,1.331832,1)
+  lprob <- dnorm(pars[5], 0.1653183, 0.02773053, 1)
+  lprob <- lprob + dlnorm(pars[1], -4.493789, 0.2860455, 1)
+  lprob <- lprob + dlnorm(pars[2], -4.117028, 0.4751615, 1)
+  lprob <- lprob + dlnorm(pars[3], -2.977965, 1.331832, 1)
   
   return(lprob)
 }
 
-init.pars <- c(0.01188150,0.01831852,0.05434378,1.049317e-05,0.1657944,
+init.pars <- c(0.01188150,0.01831852, 0.05434378, 1.049317e-05, 0.1657944,
                        0.3855279, 0.9269811, 0.5710709, -0.1543508)
 llikelihood <- build.llikelihood()
 
 # Run adaptive.mcmc
-mcmc.result <- adaptive.mcmc( lprior=llprior, llikelihood=llikelihood,
-               nburn=100, 
-               initial=init.pars,
-               nbatch=100, blen=10 )
+mcmc.result <- adaptive.mcmc(lprior = llprior, llikelihood = llikelihood,
+               nburn = 100, 
+               initial = init.pars,
+               nbatch = 100, blen = 10)
 ```
 
 # Analysing the results
