--- a/vignettes/inference.Rmd
+++ b/vignettes/inference.Rmd
@@ -132,7 +132,7 @@ build.llikelihood <- function()
   data("confirmed.samples")
   
   # Sum all populations with a certain age into their corresponding age group
-  age.group.sizes.5 <- separate.into.age.groups(age_sizes$V1,c(5,15,45,65))
+  age.group.sizes.5 <- stratify_by_age(age_sizes$V1,c(5,15,45,65))
  
   # Define the actual log likelihood function
   llikelihood.f <- function( pars )
@@ -149,7 +149,7 @@ build.llikelihood <- function()
     contacts <- contact.matrix(as.matrix(polymod_uk[proposed.contact.ids,]),
                                age_sizes[,1], age.group.limits )
 
-    age.groups <- separate.into.age.groups( age_sizes[,1], 
+    age.groups <- stratify_by_age( age_sizes[,1], 
                                            age.group.limits )
 
     # Fraction of each age group classified as high risk
@@ -161,12 +161,12 @@ build.llikelihood <- function()
                              ), ncol = 7, byrow = T)
 
     # Population sizes in each age and risk group
-    popv <- separate.into.risk.groups(
+    popv <- stratify_by_risk(
                      age.groups, risk.ratios );
 
     # Population size initially infected by age and risk group
     initial.infected <- rep( 10^pars[9], 7 )
-    initial.infected <- separate.into.risk.groups(
+    initial.infected <- stratify_by_risk(
                                                   initial.infected, risk.ratios );
 
     # Run simulation
@@ -268,8 +268,7 @@ ode.results <- function( pars )
   contacts <- contact.matrix(as.matrix(polymod_uk),
                              age_sizes[,1], age.group.limits )
   
-  age.groups <- separate.into.age.groups( age_sizes[,1], 
-                                          age.group.limits )
+  age.groups <- stratify_by_age(age_sizes[,1], age.group.limits)
   
   # Fraction of each age group classified as high risk
   # We can classify a third risk group, but we are not doing
@@ -280,12 +279,12 @@ ode.results <- function( pars )
   ), ncol=7, byrow=T )
   
   # Population sizes in each age and risk group
-  popv <- separate.into.risk.groups(
+  popv <- stratify_by_risk(
     age.groups, risk.ratios );
   
   # Population size initially infected by age and risk group
   initial.infected <- rep( 10^pars[9], 7 )
-  initial.infected <- separate.into.risk.groups(
+  initial.infected <- stratify_by_risk(
     initial.infected, risk.ratios );
   
   # Run simulation
