--- a/vignettes/modelling.Rmd
+++ b/vignettes/modelling.Rmd
@@ -37,12 +37,12 @@ library(fluEvidenceSynthesis)
 data(age_sizes) # Population divided by age (0 years old, 1 years old, etc.)
 
 # Separate into non elderly (<65) and elderly population
-ag <- separate.into.age.groups(age_sizes$V1, limits=c(65)) # c( 43670500, 8262600 )
+ag <- stratify_by_age(age_sizes$V1, limits=c(65)) # c( 43670500, 8262600 )
 
 # Separate in risk groups. In this case we assume one additional (high) risk groups and that respectively 
 # 1 percent of non elderly and 40% of elderly are in this risk group. It is possible to
 # define an additional risk group (e.g. pregnant women) if desired
-population <- separate.into.risk.groups( ag, matrix(c(0.01,0.4),nrow=1) ) # c( 43233795, 4957560, 436705, 3305040 )
+population <- stratify_by_risk( ag, matrix(c(0.01,0.4),nrow=1) ) # c( 43233795, 4957560, 436705, 3305040 )
 ```
 The resulting vector holds the low risk population by age group (43233795, 4957560) followed by the high risk (436705, 3305040).
 
@@ -52,7 +52,7 @@ The number of people infected at the beginning of the season, again separated in
 ```{r}
 library(fluEvidenceSynthesis)
 ag <- c(1000,1000)
-initial.infected <- separate.into.risk.groups( ag, matrix(c(0.01,0.4),nrow=1) ) # c(990, 600, 10, 400)
+initial.infected <- stratify_by_risk( ag, matrix(c(0.01,0.4),nrow=1) ) # c(990, 600, 10, 400)
 ```
 
 ### Vaccination calendar
