--- a/vignettes/adapting-the-transmission-model.Rmd
+++ b/vignettes/adapting-the-transmission-model.Rmd
@@ -20,10 +20,9 @@ This vignette shows how to re-implement the SEEIIR model used in the package usi
 infectionODEs(population, initial_infected, vaccine_calendar, contact_matrix,
   susceptibility, transmissibility, infection_delays, interval)
 ```
-For more details see the [modelling vignette](https://blackedder.github.io/flu-evidence-synthesis/modelling.html). The goal of this vignette is to get a similar function, but implemented using R.
+For more details see the [modelling vignette](https://blackedder.github.io/flu-evidence-synthesis/modelling.html).
 
-
-```{r install, cache = T}
+```{r install, cache = T, echo = F}
 if (!require("devtools")) {
   install.packages("devtools")
   library("devtools")
@@ -44,16 +43,17 @@ if (!require("tidyr")) {
 
 ```{r infection_odin, dependson = "model_definition", cache = TRUE}
 infection_odin <- function(pop, init_pop, cal, cij, susc, trans, lat, interval) {
-  warning("These dates should be derived from the vaccination calendar")
-  t <- as.numeric(seq(as.Date("2010-09-01"), as.Date("2011-08-25"), interval))
   
-  agn <- length(pop)
-  no_risk_groups <- agn/nrow(cij)
-  no_age_groups <- agn/no_risk_groups
+  begin_date <- as.Date(paste0(format(cal$dates[1], "%Y"),"-09-01"))
+  t <- as.numeric(seq(begin_date, begin_date + 7*52, interval))
   
-  # Contacts matrix only covers one set of age groups, here I "repeat" it to also cover 
+  no_groups <- length(pop)
+  no_risk_groups <- no_groups/nrow(cij)
+  no_age_groups <- no_groups/no_risk_groups
+  
+  # Contacts matrix only covers one set of age groups, here we "repeat" it to also cover 
   # risk groups
-  new_cij <- matrix(rep(0,agn*agn), nrow = agn)
+  new_cij <- matrix(rep(0,no_groups*no_groups), nrow = no_groups)
   for (k in 1:no_risk_groups) {
     for (l in 1:no_risk_groups) {
       lk <- (k - 1)*no_age_groups + 1
@@ -67,113 +67,75 @@ infection_odin <- function(pop, init_pop, cal, cij, susc, trans, lat, interval) 
              
   
   # Set the parameter values
-  mod <- gen_seeiir_ag_vacc(agn = agn, cij = new_cij, trans = trans,
+  mod <- gen_seeiir_ag_vacc(no_groups = no_groups, cij = new_cij, trans = trans,
                        pop = pop,
                        I0 = init_pop,
                        susc = rep(susc,no_risk_groups),
-                       alpha = cal$efficacy[1:agn],
+                       alpha = cal$efficacy[1:no_groups],
                        dates = dates,
-                       calendar = calendar[,1:agn] )
+                       calendar = calendar[,1:no_groups],
+                       gamma1 = 2/lat[1], gamma2 = 2/lat[2])
   y <- mod$run(t, hmax = NULL, method = "euler", hini = 0.25, atol = 1)
-  #y <- mod$run(t, hmax = NULL)
   
   # Only return new infections by week, ignore the rest
-  d <- ncol(y)
-  y <- y[, (d - agn + 1):d]
+  y <- y[, (ncol(y) - no_groups + 1):ncol(y)]
+  
   # Returning the differences in cumulative infections from one week to the other
   y <- data.frame(y[2:(nrow(y)), ] - y[1:(nrow(y) - 1), ])
+  
+  #Cleanup and add Time column
   colnames(y) <- sapply(seq(1,no_risk_groups), function(i) sapply(seq(1,no_age_groups), function(j) paste0("Age", i, "Risk", j)))
-  #mutate(y, Time = sapply(t[1:nrow(y)], function(date) as.Date(date, origin = "1970-01-01")))
   mutate(y, Time = as.Date(t[1:nrow(y)], origin = "1970-01-01"))
 }
 ```
 
 ```{r model_definition, dependson = "install", cache = T}
-warning("gamma1 and 2 should be user defined")
 gen_seeiir_ag_vacc <- odin::odin({
   # Number of groups
-  agn <- user()
+  no_groups <- user()
   
   # Transmissibility
   trans <- user()
   
   # Population size by age/risk group
-  dim(pop) <- agn
   pop[] <- user()
   # Initial infection by age/risk group
-  dim(I0) <- agn
   I0[] <- user()
   # Susceptibility
-  dim(susc) <- agn
   susc[] <- user()
   
-  # Force of infection
-  dim(lambda) <- agn
-  lambda[] <- trans * susc[i] * (sum(sij[i,]))
-  
   # Latent periods
-  gamma1 <- 2.5
-  gamma2 <- 1.1
+  gamma1 <- user()
+  gamma2 <- user()
   
+  # Vaccine related variables 
+  dates[] <- user()
+  calendar[,] <- user()
+  
+  # efficacy
+  alpha[] <- user()
+  
+  # Contact matrix
+  cij[,] <- user()
+   
+  # Force of infection
+  lambda[] <- trans * susc[i] * (sum(sij[i,]))
+   
   # Vaccination
   vI[] <- interpolate(dates, calendar, "constant")
-  dim(vI) <- agn
-  dates[] <- user()
-  dim(dates) <- user()
-  calendar[,] <- user()
-  dim(calendar) <- user()
-  dim(sumN) <- agn
   # Vaccination is given as a fraction vaccination, here we scale it to 
   # a rate
   sumN[] <- if (vI[i]>0) (S[i]+E1[i]+E2[i]+I1[i]+I2[i]+R[i]) else 0
   v[] <- if (sumN[i]>0) vI[i]*pop[i]/sumN[i] else 0
-  #v[] <- 1
-  dim(v) <- agn
-  
-  # efficacy
-  dim(alpha) <- agn
-  alpha[] <- user()
-  
-  # Contact matrix
-  dim(cij) <- c(agn, agn)
-  cij[,] <- user()
-  dim(sij) <- c(agn, agn)
-  sij[,] <- cij[i,j] * (I1[j] + I2[j] + I1v[j] + I2v[j])
-   
-  dim(S) <- agn
-  dim(E1) <- agn
-  dim(E2) <- agn
-  dim(I1) <- agn
-  dim(I2) <- agn
-  dim(R) <- agn
-  dim(Sv) <- agn
-  dim(E1v) <- agn
-  dim(E2v) <- agn
-  dim(I1v) <- agn
-  dim(I2v) <- agn
-  dim(Rv) <- agn
-  dim(cumI) <- agn
-  
-  initial(S[1:agn]) <- pop[i] - I0[i]
-  initial(E1[1:agn]) <- 0
-  initial(E2[1:agn]) <- 0
-  initial(I1[1:agn]) <- I0[i]
-  initial(I2[1:agn]) <- 0
-  initial(R[1:agn]) <- 0
-  initial(cumI[1:agn]) <- 0
-  
-  initial(Sv[1:agn]) <- 0
-  initial(E1v[1:agn]) <- 0
-  initial(E2v[1:agn]) <- 0
-  initial(I1v[1:agn]) <- 0
-  initial(I2v[1:agn]) <- 0
-  initial(Rv[1:agn]) <- 0
  
-  dim(newInf) <- agn
+  # Transmission matrix
+  sij[,] <- cij[i,j] * (I1[j] + I2[j] + I1v[j] + I2v[j])
+
+  # Newly infected
   newInf[] <- lambda[i] * S[i]
-  dim(newInfv) <- agn
   newInfv[] <- lambda[i] * Sv[i]
-  
+ 
+  # Derivatives 
   deriv(S[]) <- -newInf[i] - v[i] * S[i]
   deriv(E1[]) <- newInf[i] - gamma1 * E1[i] - v[i] * E1[i]
   deriv(E2[]) <- gamma1 * (E1[i] - E2[i]) - v[i] * E2[i]
@@ -181,6 +143,7 @@ gen_seeiir_ag_vacc <- odin::odin({
   deriv(I2[]) <- gamma2 * (I1[i] - I2[i]) - v[i] * I2[i]
   deriv(R[]) <- gamma2 * I2[i] - v[i] * R[i]
   
+  # Derivatives vaccination group
   deriv(Sv[]) <- -newInfv[i] + v[i] * (1-alpha[i]) * S[i]
   deriv(E1v[]) <- newInfv[i] - gamma1 * E1v[i] + v[i] * E1[i]
   deriv(E2v[]) <- gamma1 * (E1v[i] - E2v[i]) + v[i] * E2[i]
@@ -188,8 +151,56 @@ gen_seeiir_ag_vacc <- odin::odin({
   deriv(I2v[]) <- gamma2 * (I1v[i] - I2v[i]) + v[i] * I2[i]
   deriv(Rv[]) <- gamma2 * I2v[i] + v[i] * (R[i] + alpha[i] * S[i])
    
-  # We are interested in new infections over time
+  # Tracking the cumulative amount of infections over time
   deriv(cumI[]) <- newInf[i] + newInfv[i]
+ 
+  # Initial value of parameters 
+  initial(S[1:no_groups]) <- pop[i] - I0[i]
+  initial(E1[1:no_groups]) <- 0
+  initial(E2[1:no_groups]) <- 0
+  initial(I1[1:no_groups]) <- I0[i]
+  initial(I2[1:no_groups]) <- 0
+  initial(R[1:no_groups]) <- 0
+  initial(cumI[1:no_groups]) <- 0
+  
+  initial(Sv[1:no_groups]) <- 0
+  initial(E1v[1:no_groups]) <- 0
+  initial(E2v[1:no_groups]) <- 0
+  initial(I1v[1:no_groups]) <- 0
+  initial(I2v[1:no_groups]) <- 0
+  initial(Rv[1:no_groups]) <- 0
+ 
+ 
+  # Set dimension of all variables 
+  dim(dates) <- user()
+  dim(calendar) <- user()
+  
+  dim(pop) <- no_groups
+  dim(I0) <- no_groups
+  dim(susc) <- no_groups
+  dim(lambda) <- no_groups
+  dim(v) <- no_groups
+  dim(vI) <- no_groups
+  dim(sumN) <- no_groups  
+  dim(alpha) <- no_groups
+  dim(cij) <- c(no_groups, no_groups)
+  dim(sij) <- c(no_groups, no_groups)
+ 
+  dim(S) <- no_groups
+  dim(E1) <- no_groups
+  dim(E2) <- no_groups
+  dim(I1) <- no_groups
+  dim(I2) <- no_groups
+  dim(R) <- no_groups
+  dim(Sv) <- no_groups
+  dim(E1v) <- no_groups
+  dim(E2v) <- no_groups
+  dim(I1v) <- no_groups
+  dim(I2v) <- no_groups
+  dim(Rv) <- no_groups
+  dim(cumI) <- no_groups
+  dim(newInf) <- no_groups
+  dim(newInfv) <- no_groups
 })
 ```
 
@@ -234,3 +245,7 @@ odes <- infection_odin( population, initial.infected, vaccine_calendar, contacts
 ggplot(data = odes %>% gather(Group, Infections, -Time)) + 
   geom_line(aes(x = Time, y = Infections)) + facet_wrap(~Group,scales = "free")
 ```
+
+# Further reading
+
+The next step now is to use your new model in the parameter inference. How to do this is explained in more detail in the [inference vignette](https://blackedder.github.io/flu-evidence-synthesis/inference.html).
