--- a/vignettes/adapting-the-transmission-model.Rmd
+++ b/vignettes/adapting-the-transmission-model.Rmd
@@ -25,7 +25,7 @@ infectionODEs(population, initial_infected, vaccine_calendar, contact_matrix,
 ```
 For more details on the built-in function see the [modelling vignette](https://blackedder.github.io/flu-evidence-synthesis/modelling.html).
 
-```{r install, cache = T, echo = F}
+```{r install, cache = T, echo = F, message = F, warning = F}
 if (!require("devtools")) {
   install.packages("devtools")
   library("devtools")
