--- a/vignettes/vaccination.Rmd
+++ b/vignettes/vaccination.Rmd
@@ -32,16 +32,16 @@ data(coverage)
 pander(head(coverage), caption = "The vaccination coverage rates in the UK in season 2007-08. Note that this only shows the first 6 weeks of data")
 ```
 
-The `as.vaccination.calendar()` function can be used to build a vaccination scenario object based on coverage data. In the example below we use the coverage rates for the 2007-08 season in the UK. If there are multiple age groups and risk groups then the layout in general is expected to be all age groups for one risk group, followed by the age groups for the second risk group etc. In the example below the efficacy of the under 65 at low risk is expected to be $.7$ and for the 65+ the efficacy is $.4$.
+The `as_vaccination_calendar()` function can be used to build a vaccination scenario object based on coverage data. In the example below we use the coverage rates for the 2007-08 season in the UK. If there are multiple age groups and risk groups then the layout in general is expected to be all age groups for one risk group, followed by the age groups for the second risk group etc. In the example below the efficacy of the under 65 at low risk is expected to be $.7$ and for the 65+ the efficacy is $.4$.
 
-```{r as.vaccination.calendar}
+```{r as_vaccination_calendar}
 library("fluEvidenceSynthesis")
 data(coverage)
 # Coverage rates for respectively low risk <65, low risk 65+,
 # high risk <65 and 65+. Original is in percentages. Here converted to fraction
 cov <- coverage[,c("Under.65","X65","at.risk.under.65","X65")]/100.0
 
-vaccine_calendar <- as.vaccination.calendar(efficacy = c(0.7, 0.4, 0.7, 0.4), 
+vaccine_calendar <- as_vaccination_calendar(efficacy = c(0.7, 0.4, 0.7, 0.4), 
                                         dates = coverage$Date,
                                         coverage = cov, 
                                         no_age_groups = 2, no_risk_groups = 2)
@@ -73,7 +73,7 @@ calendar[2,c(8,9)] <- 0.62
 calendar[3,c(8,9)] <- 0.62
 calendar[4,c(8,9)] <- 0.62
 
-vaccine_calendar <- as.vaccination.calendar(efficacy = efficacy, dates = dates, 
+vaccine_calendar <- as_vaccination_calendar(efficacy = efficacy, dates = dates, 
                                             coverage = calendar, no_age_groups = 7,
                                             no_risk_groups = 3)
 ```
@@ -82,18 +82,19 @@ vaccine_calendar <- as.vaccination.calendar(efficacy = efficacy, dates = dates,
 
 ```{r}
 # Load needed data
-data("age_sizes")
+data("demography")
 data("polymod_uk")
 data("inference.results")
 
 # This returns the total size of the outbreak given the vaccination scenario and the
 # 1000th posterior (mcmc) sample. The outbreak sizes is separated by age group and 
 # risk groups
-cases.per.year <- vaccinationScenario(age_sizes = age_sizes[,1],
+cases.per.year <- vaccination_scenario(demography = demography,
                      vaccine_calendar = vaccine_calendar,
                      polymod_data = as.matrix(polymod_uk),
                      contact_ids = inference.results$contact.ids[1000,],
-                     parameters = inference.results$batch[1000,]
+                     parameters = inference.results$batch[1000,],
+                     verbose = F
                     )
 ```
 
@@ -105,23 +106,21 @@ To get the full posterior of cases under this vaccination scenario you can run i
 
 ```{r,cache=T,fig.width=5,fig.height=5}
 library(ggplot2)
-cases <- sapply(seq(1,nrow(inference.results$batch)), function(i)
-{
-  sum(vaccinationScenario( age_sizes=age_sizes[,1],
-                     vaccine_calendar=vaccine_calendar,
-                     polymod_data=as.matrix(polymod_uk),
-                     contact_ids=inference.results$contact.ids[i,],
-                     parameters=inference.results$batch[i,]
-                    ))
-})
-ggplot(data=data.frame("cases"=cases)) + geom_histogram(aes(x=cases),bins=25)
+cases <- rowSums(vaccination_scenario(demography=demography,
+                              vaccine_calendar=vaccine_calendar,
+                              polymod_data=as.matrix(polymod_uk),
+                              contact_ids=inference.results$contact.ids,
+                              parameters=inference.results$batch,
+                              verbose = F
+))
+ggplot(data = data.frame("cases" = cases)) + geom_histogram(aes(x = cases), bins = 25)
 ```
 
 ## Change the vaccination coverage
 
 Here we show an example on how you could change the uptake rate of vaccination to a 80% uptake in all the age/risk groups.
 
-```{r, cache = T,fig.width=5,fig.height=5}
+```{r, cache = T, fig.width=5, fig.height=5}
 # Helper function to scale the uptake of each age/risk group, so that at the end of the vaccination period the vaccination is equal to 
 # the given final_uptake
 change_coverage <- function(data, final_uptake) {
@@ -144,19 +143,18 @@ change_coverage <- function(data, final_uptake) {
 new_calendar <- change_coverage(calendar, rep(0.8, ncol(calendar)))
 
 # The rest of the simulation is similar as above, but now using the new_calendar
-new_vaccine_calendar <- as.vaccination.calendar(efficacy = efficacy, dates = dates, 
+new_vaccine_calendar <- as_vaccination_calendar(efficacy = efficacy, dates = dates, 
                                             coverage = new_calendar, no_age_groups = 7,
                                             no_risk_groups = 3)
 
-new_cases <- sapply(seq(1,nrow(inference.results$batch)), function(i)
-{
-  sum(vaccinationScenario( age_sizes=age_sizes[,1],
-                     vaccine_calendar=new_vaccine_calendar,
-                     polymod_data=as.matrix(polymod_uk),
-                     contact_ids=inference.results$contact.ids[i,],
-                     parameters=inference.results$batch[i,]
-                    ))
-})
+new_cases <- 
+  rowSums(vaccination_scenario(demography = demography,
+                               vaccine_calendar = new_vaccine_calendar,
+                               polymod_data = as.matrix(polymod_uk),
+                               contact_ids = inference.results$contact.ids,
+                               parameters = inference.results$batch,
+                               verbose = F
+  ))
 ggplot(data=data.frame("cases"=new_cases)) + geom_histogram(aes(x=cases),bins=25)
 ```
 
